# TagHivev2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.trae/documents/: TagHive 项目优化与改进计划.md
docs/: DEVELOPMENT.md  PORTABLE_MODE.md  USAGE.md  optimization_guide.md
scripts/: build-sidecar.py  build.py  create_icon.py  dev.py
src-python/: requirements.txt  sidecar_entry.py
src-python/app/: __init__.py  config.py  main.py
src-python/app/api/: __init__.py  models.py  routes.py  thumbnails.py  websocket.py
src-python/app/core/: __init__.py  async_thumbnail.py  cache.py  cursor_pagination.py  incremental_scanner.py  indexer.py  parallel_scanner.py  query_cache.py  search.py  tag_manager.py
src-python/app/db/: __init__.py  models.py  repo.py  session.py
src-python/app/services/: __init__.py  scan_service.py  thumbnail_service.py  watch_service.py
src-python/app/utils/: __init__.py  file_types.py  hashing.py  media_info.py
src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-ui/src/: App.vue  env.d.ts  main.ts
src-ui/src/api/: client.ts  files.ts  folders.ts  tags.ts  thumbnails.ts  websocket.ts  workspace.ts
src-ui/src/components/: BatchOperations.vue  EmptyState.vue  FileCard.vue  FileListItem.vue  FolderTree.vue  FolderTreeNode.vue  HoneycombTree.vue  LazyImage.vue  LogViewer.vue  SearchBar.vue  VirtualScroller.vue
src-ui/src/router/: index.ts
(+12 files in other folders)
